--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>todo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>todo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>A classic todo app backend</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
