--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -25,9 +25,30 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>com.lmax</groupId>
+    		<artifactId>disruptor</artifactId>
+    		<version>3.4.4</version>
 		</dependency>
 
 		<dependency>
@@ -47,7 +68,7 @@
 			<scope>test</scope>
 		</dependency>
 		
-			<dependency>
+		<dependency>
   			<groupId>org.modelmapper</groupId>
   			<artifactId>modelmapper</artifactId>
   			<version>3.0.0</version>
