--- a/Spring/src/main/resources/application.properties
+++ b/Spring/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.username=stacey
 spring.datasource.password=MyPass
 spring.jpa.hibernate.ddl-auto=update
+springdoc.api-docs.path=/api-docs
