--- a/React/package.json
+++ b/React/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
