--- a/React/package.json
+++ b/React/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.5.1",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
