--- a/React/tsconfig.json
+++ b/React/tsconfig.json
@@ -18,8 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"]
   },
-  "include": ["src"],
+  "include": ["src", "./src/config/vitest-setup.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
